Commit initial CSS

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,55 @@
+#title-form {
 
+}
+
+#url-form {
+
+}
+
+#create-button {
+
+}
+
+.bookmark-buttons {
+
+}
+
+.box {
+
+}
+
+.button {
+
+}
+
+.delete-button {
+
+}
+
+.form {
+
+}
+
+.list {
+
+}
+
+.logo {
+
+}
+
+.text {
+
+}
+
+.read-button {
+
+}
+
+.title {
+
+}
+
+.url {
+
+}
