--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,14 @@
 body {
   font-family: 'Open Sans', sans-serif;
+  background-color: #455a64;
+  /*line-height: 1.15;*/
+}
+
+hr {
+  width: 95%;
+  size: 1px;
+  color: #cfd8dc;
+  background-color: #cfd8dc;
 }
 
 #create-button {
@@ -20,40 +29,50 @@ body {
   height: 125px;
   border: 2px solid #607d8b;
   background-color: #fff;
-  margin: 10px;
-  padding: 10px;
   position: relative;
+  margin: 15px auto 15px auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .box a {
   text-decoration: none;
+  font-size: 18px;
   color: #607d8b;
+  margin: 10px 0 10px 5px;
 }
 
-.box a:hover {
+/*.box a:hover {
   color: #607d8b;
   border-bottom: 4px solid #ffc107;
-}
+}*/
 
 .box h1 {
   color: #455a64;
   font-weight: 800;
   font-size: 22px;
-  border-bottom: 4px solid #f2f4f4;
+  /*border-bottom: 4px solid #f2f4f4;*/
 }
 
 .box p {
-  border-bottom: 4px solid #f2f4f4;
+  /*border-bottom: 4px solid #f2f4f4;*/
 }
 
 .delete-button {
   float: right;
 }
 
+/*.box div {
+  border-top: 4px solid #f2f4f4;
+}*/
+
 div button {
   font-size: 16px;
-  font-weight: 200;
+  font-weight: 400;
   color: #455a64;
+  position: relative;
 }
 
 .form {
@@ -70,17 +89,19 @@ div button {
   height: 6vh;
   width: 90%;
   font-size: 24px;
-  font-weight: 200;
+  font-weight: 400;
   letter-spacing: 2.5px;
+  padding-left: 10px;
 }
 
 .list {
   background-color:#cfd8dc;
-  height: 60vh;
-  display: flex;
+  /*height: 60vh;*/
+  /*margin-top: -20px;*/
+  /*display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  align-items: center;*/
   padding-top: 5px;
 }
 
