--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 body {
-  font-family: 'Open Sans', sans-serif;
   background-color: #455a64;
-  /*line-height: 1.15;*/
+  font-family: 'Open Sans', sans-serif;
 }
 
 hr {
@@ -13,13 +12,11 @@ hr {
 
 #clear-button, #create-button {
   background-color: #ffc107;
+  border: 2px solid #ffc107;
   color: #fff;
   font-weight: 800;
   font-size: 16px;
-  /*text-shadow: 1px 1px 1px black;*/
   width: 92.5%;
-  border: 2px solid #ffc107
-  /*margin: 20px auto;*/
 }
 
 #clear-button:hover,
@@ -27,7 +24,6 @@ hr {
   background-color: #ffd773;
   cursor: pointer;
 }
-
 
 .box {
   width: 90%;
@@ -50,23 +46,12 @@ hr {
   margin: 10px 0 10px 5px;
 }
 
-/*.box a:hover {
-  color: #607d8b;
-  border-bottom: 4px solid #ffc107;
-}*/
-
 .box h1 {
   color: #455a64;
   font-weight: 800;
   font-size: 22px;
   padding-left: 5px;
-  /*border-bottom: 4px solid #f2f4f4;*/
 }
-
-.box p {
-  /*border-bottom: 4px solid #f2f4f4;*/
-}
-
 
 button:focus {
   outline:0;
@@ -74,10 +59,6 @@ button:focus {
 
 .delete-button {
   float: right;
-}
-
-.box div {
-  /*border-top: 4px solid #f2f4f4;*/
 }
 
 div button {
@@ -91,48 +72,28 @@ div button {
 
 .form {
   height: auto;
-  /*margin: 20px 20px;*/
-  /*padding: 5px 10px 5px 10px;*/
+  width: 100%;
   text-align: center;
-  /*position: fixed;*/
-  /*display: flex;*/
-  /*flex-direction: column;*/
-  /*justify-content: space-around;*/
-  /*padding: auto;*/
-  /*align-items: center;*/
   background-color: #455a64;
-  margin: 20px;
+}
+
+#title-form, #url-form {
+  padding-left: 10px;
 }
 
 .form-input {
   height: 6vh;
-  width: 95%;
+  width: 90%;
   font-size: 24px;
   font-weight: 400;
   letter-spacing: 2.5px;
   margin: 10px;
-  /*align-items: center;*/
-  /*position: fixed;*/
-  padding: 0 10px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 .list {
+  padding: 10px 0;
   background-color:#cfd8dc;
-  padding: 5px;
-  /*height: 60vh;*/
-  /*margin-top: -20px;*/
-  /*display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;*/
-  /*padding-top: 5px;*/
   height: auto;
-  /*padding-bottom: 5px;*/
-  /*min-height: 100vh;
-  max-height: 100%;*/
 }
 
 .logo {
@@ -151,15 +112,16 @@ div button {
 
 .read .delete-button {
   background-color: #f2f4f4;
-  border-bottom: 2px solid #cfd8dc;
 }
 
-.read .box a {
+/*line*/
+.read .hov-line {
   color: #607d8b;
   border-bottom: 2px solid #cfd8dc;
 }
 
 .title {
+  margin-top: 20px;
   width: 100%;
   font-size: 24px;
   font-weight: 800;
@@ -206,39 +168,31 @@ input:focus{
 }
 
 .error-msg {
-  /*width: 90%;*/
   opacity: 0;
   color: #ff5185;
   text-shadow: black -1px 1px 1px;
   text-align: center;
 }
-@media screen and (min-width: 700px) {
 
-  /*.box a:hover {
-    color: #607d8b;
-    border-bottom: 2px solid #ffc107;
-  }*/
+.hov-line:hover {
+  color: #607d8b;
+  border-bottom: 2px solid #ffc107;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 800px) {
 
   .form {
     width: 50%;
     height: 100vh;
-    margin: auto;
     position: fixed;
+    justify-content: center;
     margin-top: 25vh;
   }
 
-  .form-input{
-    /*width: 90%;*/
-
+  .form-input {
     margin: 23px;
     width: 90%;
-
-  }
-
-  .hov-line:hover {
-    color: #607d8b;
-    border-bottom: 2px solid #ffc107;
-    cursor: pointer;
   }
 
   .list {
@@ -249,16 +203,12 @@ input:focus{
     right: 0;
   }
 
-  .box {
-    /*width: 90%;*/
-  }
-
   .logo {
     height: 70px;
     width: 70px;
   }
 
   .title {
+    margin-top: 0;
     font-size: 46px;
-
   }
