--- a/css/main.css
+++ b/css/main.css
@@ -52,9 +52,8 @@ hr {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  transition-property: all;
+  transition-property: background-color;
   transition-duration: 1s;
-  transition-timing-function: ease-in-out;
 }
 
 .box a {
